// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-static-file-ancestors should get ancestors for a nested file or folder 1`] = `
{
  "content": [
    {
      "text": "[{"name":"","path":"/","parent":null,"isFolder":true,"hasChildren":true,"id":"00000000-0000-0000-0000-000000000000"},{"name":"bin","path":"/bin","parent":{"path":"/","id":"00000000-0000-0000-0000-000000000000"},"isFolder":true,"hasChildren":true,"id":"00000000-0000-0000-0000-000000000000"},{"name":"Debug","path":"/bin/Debug","parent":{"path":"/bin","id":"00000000-0000-0000-0000-000000000000"},"isFolder":true,"hasChildren":true,"id":"00000000-0000-0000-0000-000000000000"}]",
      "type": "text",
    },
  ],
}
`;

exports[`get-static-file-ancestors should handle empty or root descendant path 1`] = `
{
  "content": [
    {
      "text": "[]",
      "type": "text",
    },
  ],
}
`;

exports[`get-static-file-ancestors should handle invalid descendant path gracefully 1`] = `
{
  "content": [
    {
      "text": "[{"name":"","path":"/","parent":null,"isFolder":true,"hasChildren":true},{"name":"nonexistent","path":"/nonexistent","parent":{"path":"/"},"isFolder":true,"hasChildren":false},{"name":"invalid","path":"/nonexistent/invalid","parent":{"path":"/nonexistent"},"isFolder":true,"hasChildren":false},{"name":"path","path":"/nonexistent/invalid/path","parent":{"path":"/nonexistent/invalid"},"isFolder":true,"hasChildren":false},{"name":"file.txt","path":"/nonexistent/invalid/path/file.txt","parent":{"path":"/nonexistent/invalid/path"},"isFolder":true,"hasChildren":false}]",
      "type": "text",
    },
  ],
}
`;

exports[`get-static-file-ancestors should handle root-level item path gracefully 1`] = `
{
  "content": [
    {
      "text": "[{"name":"","path":"/","parent":null,"isFolder":true,"hasChildren":true,"id":"00000000-0000-0000-0000-000000000000"},{"name":"bin","path":"/bin","parent":{"path":"/","id":"00000000-0000-0000-0000-000000000000"},"isFolder":true,"hasChildren":true,"id":"00000000-0000-0000-0000-000000000000"}]",
      "type": "text",
    },
  ],
}
`;
